<resources>
    <string name="left">返回</string>
    <string name="right">完成</string>
    <string name="sure">确定</string>
    <string name="next_step">下一步</string>
    <string name="triming_wating">正在截取,请耐心等待!</string>
    <string name="cancel">取消</string>
    <string name="edit">编辑</string>
    <string name="release">发布</string>
    <string name="setting_competence">设置权限</string>
    <string name="setting_date">设置日期</string>
    <string name="setting_more">更多设置</string>
    <string name="app_name">Android视频编辑SDK</string>
    <string name="competence_0">仅亲友可见</string>
    <string name="trim_video">视频截取</string>
    <string name="trim_hint">滑动选择你要截取的片段</string>
    <string name="preview_error">暂时无法预览，请重试！</string>
    <string name="upload_successs">上传成功!</string>
    <string name="video_share_uploading">正在上传...</string>
    <string name="video_not_found">没有找到视频</string>
    <string name="photo_not_found">没有找到图片</string>
    <string name="wait">请稍候...</string>
    <string name="tocontinue">继续</string>
    <string name="unname">未命名</string>
    <string name="unknow">未知</string>
    <string name="empty">" "</string>
    <string name="trim_video_keep">保留选择范围</string>
    <string name="trim_video_remove">删除选择范围</string>
    <string name="trim_video_no_videoitem">无视频文件！</string>
    <string name="trim_video_trimming">正在截取视频...</string>
    <string name="trim_video_trim_cancel">视频截取已取消!</string>
    <string name="trim_video_trim_failed">视频截取失败!</string>
    <string name="trim_video_trim">(截取)</string>
    <string name="trim_video_seekbar_hint">拖动黄色区域，选中想要保留的视频片断</string>
    <string name="speed_control_video_seekbar_hint">拖动黄色区域，选择你要调节的区域</string>
    <string name="trim_video_seekbar_hint_r">拖动黑色区域，选中想要删除的视频片断</string>
    <string name="speed_control_video_seekbar">播放速度:%s</string>
    <string name="crop_video_croping">正在裁剪视频...</string>
    <string name="crop_video_trim_cancel">视频裁剪已取消!</string>
    <string name="crop_video_trim_failed">视频裁剪失败!</string>
    <string name="crop_video_importing">正在截取视频...</string>
    <string name="crop_video_import_failed">视频截取失败！</string>
    <string name="crop_video_import_cancel">视频截取已取消！</string>
    <string name="crop_video_crop">(裁剪)</string>
    <string name="trim_title">截取</string>
    <string name="title_activity_video_share">VideoShareActivity</string>
    <string name="getlocation">添加位置</string>
    <string name="addlable">添加标签</string>
    <string name="title_activity_video_prieview">VideoPrieviewActivity</string>
    <string name="priview_title">预览</string>
    <string name="trim_ing">正在截取...</string>
    <string name="more_sight">整体预览</string>
    <string name="end_sight">结束预览</string>
    <string name="more_orientation">比例</string>
    <string name="orientation_title">选择画面比例</string>
    <string name="orientation_1_1">1:1</string>
    <string name="orientation_landscape">横屏</string>
    <string name="orientation_portrait">竖屏</string>
    <string name="orientation_auto">自动</string>
    <string name="addmenu_addimage">添加图片</string>
    <string name="addmenu_addvideo">添加视频</string>
    <string name="addmenu_addtext">添加文字板</string>
    <string name="addmenu_transition">切换转场</string>
    <string name="transition_default">使用随机转场</string>
    <string name="transition_apply_to_all">应用到所有转场</string>
    <string name="select_camera_photo">拍照</string>
    <string name="select_camera_video">录像</string>
    <string name="crop_proportion_1x1">1:1</string>
    <string name="crop_proportion_original">原始</string>
    <string name="crop_proportion_free">自由</string>
    <string name="crop_rotate_mirror_reset">重置</string>
    <string name="crop_rotate_free">比例 : 自由</string>
    <string name="crop_rotate_confirm">确定裁剪</string>
    <string name="edit_music_add">点击添加配乐</string>
    <string name="edit_music_media_voice">视频原音</string>
    <string name="musicVoice">配乐</string>
    <string name="videoVoice">原音</string>
    <string name="edit_click_split">单击分割</string>
    <string name="select_media_title_video">视频</string>
    <string name="select_media_title_photo">图片</string>
    <string name="import_info" formatted="false">视频:%d,图片:%d</string>
    <string name="import_info_video_only" formatted="false">视频:%d</string>
    <string name="import_info_photo_only" formatted="false">图片:%d</string>
    <string name="edit_priview">剪辑</string>
    <string name="continue_txt">继续</string>
    <string name="preview_spilt">分割</string>
    <string name="preview_rotate">旋转</string>
    <string name="preview_mirror">镜像</string>
    <string name="preview_crop">裁切</string>
    <string name="preview_speed">变速</string>
    <string name="preview_copy">复制</string>
    <string name="preview_reverse">倒序</string>
    <string name="preview_del">删除</string>
    <string name="preview_sort">调序</string>
    <string name="preview_intercept">截取</string>
    <string name="preview_img_duration">图片时长</string>
    <string name="preview_edit_pic">编辑</string>
    <string name="preview_text">文字</string>
    <string name="crop_free_title">自由裁切</string>
    <string name="crop_normal_title">原始值裁切</string>
    <string name="crop_1x1_title">正方形裁切</string>
    <string name="montage">剪辑</string>
    <string name="dragged_into_trash">拖进垃圾桶删除</string>
    <string name="release_for_del">松开删除</string>
    <string name="speed_priview">视频速度</string>
    <string name="release_hand_for_del">松开手删除</string>
    <string name="dragged_info_trash_del">拖进垃圾桶删除</string>
    <string name="music">音乐</string>
    <string name="music2">音乐2</string>
    <string name="audio">配音</string>
    <string name="subtitle">字幕</string>
    <string name="special">特效</string>
    <string name="filter">滤镜</string>
    <string name="mv">MV</string>
    <string name="transition">转场</string>
    <string name="doodle">涂鸦</string>
    <string name="partedit">片段编辑</string>
    <string name="moreaudio">多点配乐</string>
    <string name="theme">主题</string>
    <string name="watermark">水印</string>
    <string name="export">导出</string>
    <string name="add_subtitle">添加字幕</string>
    <string name="add_special">添加特效</string>
    <string name="special_edit">编辑特效</string>
    <string name="drag_frame_for_subtitle_start_end">拖动边框,调整字幕的起始结束位置</string>
    <string name="edit_subtitle">编辑字幕</string>
    <string name="subtitle_style">样式</string>
    <string name="subtitle_font_style">字体</string>
    <string name="subtitle_color">颜色</string>
    <string name="bg_color">背景色</string>
    <string name="subtitle_size">大小</string>
    <string name="subtitle_stroke">描边</string>
    <string name="none">无</string>
    <string name="music_origin_close">无</string>
    <string name="music_none">无配乐</string>
    <string name="video_voice_n">原音开</string>
    <string name="video_voice_p">原音关</string>
    <string name="local">本地</string>
    <string name="used">用过</string>
    <string name="music_yun">云音乐</string>
    <string name="complete">完成</string>
    <string name="crop_mirror_reset">还原</string>
    <string name="music_library">乐库</string>
    <string name="music_history">常用</string>
    <string name="music_no_song">无配乐</string>
    <string name="music_origin">原音</string>
    <string name="music_soundtrack">配乐</string>
    <string name="music_soundtrack01">配乐1</string>
    <string name="music_soundtrack02">配乐2</string>
    <string name="music_soundtrack03">配乐3</string>
    <string name="music_soundtrack04">配乐4</string>
    <string name="music_soundtrack05">配乐5</string>
    <string name="filter_no_filter">原图</string>
    <string name="filter_01">黑白</string>
    <string name="filter_02">怀旧</string>
    <string name="filter_03">滤镜3</string>
    <string name="filter_04">滤镜4</string>
    <string name="filter_05">古铜色</string>
    <string name="download_theme">更多主题</string>
    <string name="theme_none">无</string>
    <string name="filter_06">蓝色时刻</string>
    <string name="filter_07">冷艳</string>
    <string name="filter_08">暖洋洋</string>
    <string name="filter_09">优格</string>
    <string name="show_style_item_download">更多</string>
    <string name="show_style_item_null">无</string>
    <string name="show_style_item_recovery">淡入</string>
    <string name="show_style_item_flash_white">闪白</string>
    <string name="show_style_item_flash_black">闪黑</string>
    <string name="show_style_item_to_left">左推</string>
    <string name="show_style_item_to_right">右推</string>
    <string name="show_style_item_to_up">上推</string>
    <string name="show_style_item_to_down">下推</string>
    <string name="show_style_item_wind">百叶窗</string>
    <string name="show_style_item_watch">时针</string>
    <string name="show_style_item_mosaic">马赛克</string>
    <string name="audio_tip">按住持续配音，松开后配音结束</string>
    <string name="audio_press">按住配音</string>
    <string name="audio_remove_tip">点击按钮可删除当前选中的配音片段</string>
    <string name="audio_reset">重配</string>
    <string name="audio_audition">试听</string>
    <string name="start_record_program">启动系统录音程序</string>
    <string name="play_recording">播放录音</string>
    <string name="start_recording">开始录音</string>
    <string name="stop_recording">停止录音</string>
    <string name="start_record_by_audioRecord">使用AudioRecord录音</string>
    <string name="stop_record_by_audioRecord">停止AudioRecord录音</string>
    <string name="start_play_by_audioTrack">使用AudioTrack播放</string>
    <string name="stop_play_by_audioTrack">停止AudioTreak播放</string>
    <string name="sudio_synthesis">音频合成</string>
    <string name="play_synthesis_audio">播放合成音频</string>
    <string name="stop_synthesis_audio">停止播放合成音频</string>
    <string name="subtitle_cannot_no">请添加字幕</string>
    <string name="photo_duration">时长</string>
    <string name="del">删除</string>
    <string name="funny">搞怪</string>
    <string name="unclassified">未分类</string>
    <string name="more">更多</string>
    <string name="et_subtitle_size">字体大小 </string>
    <string name="et_subtitle_ttf">选择字体</string>
    <string name="et_subtitle_color">字体颜色</string>
    <string name="et_subtitle_edit">编辑字幕</string>
    <string name="sub_style">字幕样式</string>
    <string name="split_duration_too_low">分割视频的时间太短</string>
    <string name="split_check_video_length">请选择视频区域</string>
    <string name="please_check_network">没有可用的网络</string>
    <string name="loading_style">正在加载样式</string>
    <string name="last_split_cannt_del">至少保留一段视频</string>
    <string name="add_failed">时间区域太短，不能添加</string>
    <string name="livecamera_record_stop_record">关闭</string>
    <string name="camera_filter_">原图</string>
    <string name="camera_filter_blackboard">黑板</string>
    <string name="camera_filter_whiteboard">白板</string>
    <string name="camera_filter_sepia">怀旧</string>
    <string name="camera_filter_aqua">冷色</string>
    <string name="camera_filter_mono">黑白</string>
    <string name="camera_filter_posterize">油墨</string>
    <string name="camera_filter_solarize">曝光</string>
    <string name="camera_filter_negative">底片</string>
    <string name="activity_page_name_livecamera">录像</string>
    <string name="record_no_external_storage">没有存储卡或存储卡未加载！</string>
    <string name="record_use_internal_storage">当前使用手机存储空间较小，可能会影响视频录制与编辑！</string>
    <string name="camera_coder_error_video_config">配置了无效视频参数！</string>
    <string name="camera_coder_error_audio_config">配置了无效音频参数！</string>
    <string name="livecamera_record_cannot_start">开始录制失败！</string>
    <string name="livecamera_record_error">无法录制视频！</string>
    <string name="livecamera_do_sys_record">使用系统摄像机进行录制</string>
    <string name="livecamera_record_switch_filter_failed">切换滤镜失败！</string>
    <string name="livecamera_record_open_flash_failed">无法打开闪光灯！</string>
    <string name="livecamera_record_changeto_high_quelity">切换到高清</string>
    <string name="livecamera_record_changeto_narmal_quelity">切换到普清</string>
    <string name="livecamera_record_black_screen">黑屏</string>
    <string name="livecamera_record_continue">继续</string>
    <string name="livecamera_record_high_quelity">高清</string>
    <string name="livecamera_record_normal_quelity">普清</string>
    <string name="pause">暂停</string>
</resources>